// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Triggered Flyout [Non-forwarded-refs] Component trigger.getDOMNode() returns node 1`] = `
<a
  href="#test"
>
  Test
</a>
`;

exports[`Triggered Flyout [Non-forwarded-refs] Warns for Component triggers that do not implement getDOMNode() 1`] = `
<a
  href="#test"
>
  Test
</a>
`;

exports[`Triggered Flyout [Non-forwarded-refs] Warns for Component triggers that do not implement getDOMNode() 2`] = `
<a
  href="#test"
>
  Test
</a>
`;

exports[`Triggered Flyout [Non-forwarded-refs] Warns for Stateless component triggers 1`] = `
<a
  href="#test"
>
  Test
</a>
`;

exports[`Triggered Flyout [Non-forwarded-refs] Warns for Stateless component triggers 2`] = `
<a
  href="#test"
>
  Test
</a>
`;

exports[`Triggered Flyout Base Case 1`] = `
<button
  aria-haspopup="dialog"
  className="flyout-trigger flyout-closed"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyPress={[Function]}
  tabIndex={0}
>
  Trigger
</button>
`;

exports[`Triggered Flyout Children recieve onDismiss prop (renderContent)  1`] = `
<button
  aria-haspopup="dialog"
  className="flyout-trigger flyout-open"
  tabIndex={0}
>
  Trigger
</button>
`;

exports[`Triggered Flyout Controlled 1`] = `
<button
  aria-haspopup="dialog"
  className="flyout-trigger flyout-closed"
  tabIndex={0}
>
  Trigger
</button>
`;

exports[`Triggered Flyout Controlled 2`] = `
Array [
  <button
    aria-haspopup="dialog"
    className="flyout-trigger flyout-open"
    tabIndex={0}
  >
    Trigger
  </button>,
  <div
    data-target-tag-name="DIV"
    data-type="portal"
  >
    <div
      aria-expanded="true"
      aria-role="dialog"
      className="aligned-flyout open bottom center flyout arrow flyout-arrow"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      style={
        Object {
          "left": "0px",
          "position": "absolute",
          "top": "15px",
          "visibility": undefined,
          "zIndex": undefined,
        }
      }
      tabIndex={0}
    >
      <div
        className="flyout-arrow"
      />
      <div
        className="flyout-inner"
        style={
          Object {
            "maxHeight": null,
            "maxWidth": null,
          }
        }
      >
        <div>
          My Flyout Content
        </div>
        <div>
          My New Flyout Content
        </div>
        <div
          aria-hidden="true"
          className="focus-out-catch"
          onFocus={[Function]}
          tabIndex={0}
        />
      </div>
    </div>
  </div>,
]
`;

exports[`Triggered Flyout Controlled 3`] = `
<div
  aria-haspopup="dialog"
  className="flyout-trigger new flyout-closed"
  tabIndex={0}
/>
`;

exports[`Triggered Flyout Controlled doesn't auto dismiss 1`] = `
<div
  aria-haspopup="dialog"
  className="flyout-trigger flyout-open"
  tabIndex={0}
/>
`;

exports[`Triggered Flyout Ref is not dropped from custom trigger 1`] = `
<a
  aria-haspopup="dialog"
  className="flyout-trigger flyout-closed"
  href="#test"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyPress={[Function]}
  tabIndex={0}
  value="Test"
>
  Test
</a>
`;

exports[`Triggered Flyout Specify Element Trigger 1`] = `
<a
  aria-haspopup="dialog"
  className="flyout-trigger flyout-closed"
  href="#test"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyPress={[Function]}
  tabIndex={0}
  value="Test"
>
  Test
</a>
`;

exports[`Triggered Flyout Specify Trigger 1`] = `
<button
  aria-haspopup="dialog"
  className="flyout-trigger flyout-closed"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyPress={[Function]}
  tabIndex={0}
  type="button"
  value="Test"
>
  input
</button>
`;

exports[`Triggered Flyout Trigger Click Handlers 1`] = `
<div
  aria-haspopup="dialog"
  className="flyout-trigger custom-trigger flyout-closed"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyPress={[Function]}
  tabIndex={0}
/>
`;

exports[`Triggered Flyout defaultState 1`] = `
Array [
  <button
    aria-haspopup="dialog"
    className="flyout-trigger flyout-open"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyPress={[Function]}
    tabIndex={0}
  >
    Trigger
  </button>,
  <div
    data-target-tag-name="DIV"
    data-type="portal"
  >
    <div
      aria-expanded="true"
      aria-role="dialog"
      className="aligned-flyout open bottom center flyout"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      style={
        Object {
          "left": "0px",
          "position": "absolute",
          "top": "0px",
          "visibility": undefined,
          "zIndex": undefined,
        }
      }
      tabIndex={0}
    >
      <div
        className="flyout-inner"
        style={
          Object {
            "maxHeight": null,
            "maxWidth": null,
          }
        }
      >
        <div>
          My Flyout Content
        </div>
        <div
          aria-hidden="true"
          className="focus-out-catch"
          onFocus={[Function]}
          tabIndex={0}
        />
      </div>
    </div>
  </div>,
]
`;

exports[`Triggered Flyout hover over trigger opens flyout 1`] = `
<button
  aria-haspopup="dialog"
  className="flyout-trigger flyout-closed"
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyPress={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  tabIndex={0}
>
  Trigger
</button>
`;

exports[`Triggered Flyout hover over trigger opens flyout 2`] = `
Object {
  "closeTimeout": 300,
  "openTimeout": 300,
}
`;

exports[`Triggered Flyout hover over trigger opens flyout 3`] = `
Object {
  "closeTimeout": 2,
  "openTimeout": 1,
}
`;

exports[`Triggered Flyout mouse out of flyout closes 1`] = `
<button
  aria-haspopup="dialog"
  className="flyout-trigger flyout-closed"
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyPress={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  tabIndex={0}
>
  Trigger
</button>
`;
